Fixed `code` and `pre` elements to be styled correctly on both light and dark mode on valtio.dev (#1033)
* fixed valtio.dev styles for pre and code elements in both light and dark mode

* fixed valtio.dev styles for pre and code elements in both light and dark mode

--- a/website/styles/prism-theme.css
+++ b/website/styles/prism-theme.css
@@ -42,6 +42,10 @@ pre[class*="language-"] {
 
 code:not([class*="language-"]) {
   padding: 0.1em 0.3em;
+  background: #eee;
+}
+
+.dark code:not([class*="language-"]) {
   background: #2e3440;
 }
 
